<resources>
    <string name="app_name">Class_Work_2</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="number_zero">0</string>
    <string name="plus">+</string>
    <string name="number_there">3</string>
    <string name="number_two">2</string>
    <string name="number_one">1</string>
    <string name="minus">-</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="multiplication">x</string>
    <string name="number_nein">9</string>
    <string name="number_eight">8</string>
    <string name="number_seven">7</string>
    <string name="division">÷</string>
    <string name="percent">%</string>
    <string name="plus_minus">+/-</string>
    <string name="clear">AC</string>
</resources>